--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Hello world</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore soluta iste quaerat nesciunt at eaque exercitationem assumenda hic nisi sint similique vero natus temporibus sit, doloremque nam numquam eveniet reprehenderit!</p>
+
+    <h2>hi netsi</h2>
 </body>
 </html>
